# rust_study

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/benches/: bench1.rs  bench2.rs  log_bench.rs
common/examples/: log_example.rs
common/src/: get_run_dir.rs  init_logger.rs  lib.rs
common/tests/: test_sample.rs
common_macros/: Cargo.toml
common_macros/src/: lib.rs
data/configure/: log4rs.yaml
declarative_macro/: README.md
declarative_macro/examples/: macro_use_new.rs  macro_use_old.rs
declarative_macro/src/: lib.rs
language/common_concepts/: Cargo.toml
language/common_concepts/examples/: c01_func_test.rs  c02_variable_test.rs  c03_test_ownership.rs  c04_enum_test.rs  c05_struct_test.rs  c06_std_collections_test.rs  dbg_test.rs  log_test.rs
language/common_concepts/src/: main.rs
language/common_concepts/tests/: c01_func_test.rs  c07_error_test.rs  co_test.rs
language/guess_game/src/: guess.rs  main.rs
language/hello_mod/: Cargo.toml
language/hello_mod/src/: hello.rs  hello_sub.rs  main.rs
language/hello_mod/src/hello_dir/: hello_dir_1.rs  hello_dir_2.rs  mod.rs
language/rust_call_c_auto/: Cargo.toml
language/rust_call_c_auto/src/: build.rs  lib.rs  wrapper.h
language/rust_call_c_manul/: Cargo.toml  build.rs
language/rust_call_c_manul/src/: c_wrapper.c  lib.rs  main.rs
module_test/guess_game/: Cargo.toml
module_test/guess_game/src/: guess.rs
module_test/hello_mod/: Cargo.toml
module_test/hello_mod/src/: hello.rs  main.rs
module_test/hello_mod/src/hello_dir/: hello_dir_1.rs
proc_macros/: Cargo.toml
proc_macros/examples/: func_name.rs  struct_name.rs  trace_var.rs
proc_macros/src/: func_name.rs  lib.rs  struct_name.rs  trace_var.rs
proc_macros/tests/: test_trace_var.rs
proc_macros_trait/: Cargo.toml
proc_macros_trait/src/: lib.rs
rust_language/: Cargo.toml
rust_language/examples/: c01_func_test.rs  c02_variable_test.rs  c03_test_ownership.rs  c05_struct_test.rs  c06_std_collections_test.rs  c07-1_error_handle.rs  c07_error_test.rs  co_test.rs  coro_test.rs  dbg_test.rs  format_test.rs  log_test.rs  macro_test.rs  pin_test.rs  static_test.rs  unsafe_borrow_test.rs
rust_language/examples/multi_file_exaplpe/: ex2.rs  main.rs
rust_language/src/: main.rs
rust_language_examples/: Cargo.toml
rust_language_examples/examples/: basic_types.rs
rust_with_c/: README.MD
rust_with_c/c_call_rust_auto/: Cargo.toml  README.md
rust_with_c/rust_call_c_auto/: Cargo.toml  README.md  build.rs
rust_with_c/rust_call_c_auto/src/: lib.rs  main.rs  wraper.c  wrapper.c  wrapper.h
rust_with_c/rust_with_c_manul/: Cargo.toml
rust_with_c/rust_with_c_manul/src/: c_wrapper.c  main.rs
rust_with_c/use_autocxx_lib/: Cargo.toml  build.rs
rust_with_c/use_autocxx_lib/src/: input.h  main.rs
rust_with_c/use_cxx_lib/: Cargo.toml  build.rs
rust_with_c/use_cxx_lib/src/: blobstore.cc  main.rs
rust_with_python/py_astar/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust_with_python/py_astar/src/: astar.rs  lib.rs  test.py
rust_with_python/py_astar/src/py_astar/: __init__.py  _core.pyi
rust_with_python/py_astar/tests/: test.py  test_astar.rs  test_board.rs
rust_with_python/pyo3_test/: Cargo.toml  main.py  pyproject.toml
rust_with_python/pyo3_test/pyo3_test/: __init__.py  additional_class.py  main.py
rust_with_python/pyo3_test/src/: lib.rs
rust_with_python/pyo3_test/test/: test_call.py
src/language/: Cargo.toml
src/language/common_concepts/: Cargo.toml
src/language/common_concepts/src/: c06_std_collections_test.rs  c07_error_test.rs  enum_test.rs  func_test.rs  main.rs  std_collections_test.rs  struct_test.rs  test_ownership.rs  variable_test.rs
src/language/common_concepts/tests/: c03_test_ownership.rs  c05_struct_test.rs
src/language/guess_game/src/: guess.rs
src/language/hello/: Cargo.toml
src/language/hello/src/: hello.rs  hello_sub.rs  main.rs
src/language/hello/src/hello_dir/: hello_dir_1.rs  mod.rs
src/language/hello_mod/src/hello_dir/: mod.rs
src/language/mod_study/: Cargo.toml
src/language/mod_study/src/: main.rs
