[package]
name = "common"
version = "0.1.0"
authors = ["khalidzhang <khalidzhang@tencent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
log = "*"
log4rs = "^1"
criterion = "0.6.0"

[[bench]]
name = "log_bench"
harness = false  # 关键！禁用默认测试框架