[package]
name = "common"
version = "0.1.0"
authors = ["khalidzhang <khalidzhang@tencent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
log = "*"
log4rs = "^1"
criterion = "0.6.0"

# 目前 criterion 和 cargo 还有兼容问题, 需要手动指定
[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "bench2"
harness = false