[package]
name = "common_concepts"
version = "0.1.0"
authors = ["khalidzhang <khalidzhang@tencent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
rand = "*"
common = { path = "../common" }
proc_macros = { path = "../proc_macros" }

log = "*"
anyhow = "^1"