[package]
name = "hello_mod"
version = "0.1.0"
authors = ["khalidzhang <khalidzhang@tencent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 多个 package 可以使用不同版本的依赖, 最终只会使用一个
rand = "0.5.0"
function_name = "0.2.0"
guess_game = { path = "../guess_game" }