[project]
name = "pyo3_test"
requires-python = ">=3.8"
classifiers = ["Private :: Do Not Upload"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = []

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
